# variables

./: Cargo.toml  README.md  config.json  data.json
assets/: index.html  script.js  style.css
src/: config.rs  main.rs  models.rs
